# VirtualSoc

./: .gitignore  .gitmodules  CMakeLists.txt  NotLoggedIn.cpp  NotLoggedIn.h
client/: ActionsWidget.cpp  ActionsWidget.h  AddFriendsWidget.cpp  AddFriendsWidget.h  AppHomeWidget.cpp  AppHomeWidget.h  FeedWidget.cpp  FeedWidget.h  FriendItem.cpp  FriendItem.h  FriendsList.cpp  FriendsListWidget.cpp  FriendsListWidget.h  FriendsMenuWidget.cpp  FriendsMenuWidget.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  MessagesWidget.cpp  MessagesWidget.h  NewMessageWidget.cpp  NewMessageWidget.h  NewPostWidget.cpp  NewPostWidget.h  NotNormalUser.cpp  NotNormalUser.h  ServerConnection.cpp  ServerConnection.h  SettingsWidget.cpp  SettingsWidget.h  client.cpp
client/Friends/: AddFriendsWidget.cpp  AddFriendsWidget.h  BlockedItem.cpp  BlockedItem.h  BlockedListWidget.cpp  BlockedListWidget.h  FriendItem.cpp  FriendItem.h  FriendRequestsWidget.cpp  FriendRequestsWidget.h  FriendsList.cpp  FriendsList.h  FriendsMenuWidget.cpp  FriendsMenuWidget.h  RequestItem.cpp  RequestItem.h
client/InApp/: ActionsWidget.cpp  AppHomeWidget.cpp  AppHomeWidget.h  NotNormalUser.cpp  SettingsWidget.cpp  SettingsWidget.h
client/LogInInterface/: LoginWidget.cpp  MainWindow.cpp  MainWindow.h
client/Messenger/: AllMessagesWidget.cpp  AllMessagesWidget.h  ChatWidget.cpp  ChatWidget.h  MessagesWidget.cpp  MessagesWidget.h  NewMessageWidget.cpp  NewMessageWidget.h
client/Posts/: FeedWidget.cpp  FeedWidget.h  NewPostWidget.cpp  NewPostWidget.h  PostWidget.cpp  PostWidget.h
common/: common.cpp  common.h  errors.cpp  errors.h
server/: ClientThread.cpp  ClientThread.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  ServerExceptions.cpp  ServerExceptions.h  server.cpp  server_main.cpp  users.txt
server/chat_files/: 1_2.txt  1_2_10.txt  1_2_3.txt  1_2_7.txt  1_3.txt  1_7.txt  2_3.txt  all_chats.txt
server/friend_files/: mrnk_Friends.txt  user11_Friends.txt  user1_Friends.txt  user2_Friends.txt  user3_Friends.txt  vlad_Friends.txt
server/posts/: all_posts.json
